--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -170,6 +170,46 @@
                                 <a class="nav-link {% if active_submenu == 'rcpsp_demo' %}active{% endif %}"
                                    href="{% url 'production_scheduling_app:rcpsp_demo' %}">Demo</a>
                             </li>
+                        {% elif active_model == 'Puzzles & Real-World Logic' %}
+                            <li class="nav-item"><strong class="sidebar-subtitle">Diet Problem</strong></li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'diet_problem_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:diet_problem_introduction' %}">Introduction</a>
+                            </li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'diet_problem_demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:diet_problem_demo' %}">Demo (WIP)</a>
+                            </li>
+
+                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">Sports Scheduling</strong></li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'sports_scheduling_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:sports_scheduling_introduction' %}">Introduction</a>
+                            </li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'sports_scheduling_demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:sports_scheduling_demo' %}">Demo (WIP)</a>
+                            </li>
+
+                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">Nurse Rostering</strong></li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'nurse_rostering_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:nurse_rostering_introduction' %}">Introduction</a>
+                            </li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'nurse_rostering_demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:nurse_rostering_demo' %}">Demo (WIP)</a>
+                            </li>
+
+                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">Traveling Salesman Problem (TSP)</strong></li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'tsp_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:tsp_introduction' %}">Introduction</a>
+                            </li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'tsp_demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:tsp_demo' %}">Demo (WIP)</a>
+                            </li>
+
+                            <li class="nav-item mt-2"><strong class="sidebar-subtitle">Sudoku Solver</strong></li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'sudoku_introduction' %}active{% endif %}" href="{% url 'puzzles_logic_app:sudoku_introduction' %}">Introduction</a>
+                            </li>
+                            <li class="nav-item nested">
+                                <a class="nav-link {% if active_submenu == 'sudoku_demo' %}active{% endif %}" href="{% url 'puzzles_logic_app:sudoku_demo' %}">Demo (WIP)</a>
+                            </li>
                         {% endif %}
                     </ul>
                 {% else %}
@@ -203,7 +243,11 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link {% if active_model == 'Production & Scheduling' %}active{% endif %}"
-                                   href="{% url 'production_scheduling_app:production_scheduling_introduction' %}">Production & Scheduling</a> {# 링크 수정 #}
+                                   href="{% url 'production_scheduling_app:production_scheduling_introduction' %}">Production & Scheduling</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link {% if active_model == 'Puzzles & Real-World Logic' %}active{% endif %}"
+                                   href="{% url 'puzzles_logic_app:puzzles_logic_introduction' %}">Puzzles & Real-World Logic</a>
                             </li>
                         </ul>
                     </div>
